--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,10 +24,10 @@ jobs:
     needs: Build
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v5
 
       - name: Test
-        run: mave test
+        run: mvn test
 
       - name: Checkstyle
         run: mvn checkstyle:checkstyle
