--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,9 @@ on:
       - main
   workflow_dispatch:
 
+permission:
+  contents: read
+
 jobs:
   Build:
     runs-on: ubuntu-latest
@@ -20,6 +23,12 @@ jobs:
 
       - name: Build
         run: mvn install
+      
+      - name: Store artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: vprofile-application
+          path: target/*.war
 
   Testing:
     runs-on: ubuntu-latest
