--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,3 +50,29 @@ jobs:
       - name: Checkstyle
         if: github.ref == 'refs/heads/main'
         run: mvn checkstyle:checkstyle
+
+    Security_Scan:
+      runs-on: ubuntu-latest
+      needs: Build
+      steps:
+        - name: Checkout code
+          uses: actions/checkout@v5
+          with:
+            fetch-depth: 0
+
+        - name: run trivy filesystem Security_Scan
+          uses: aquasecurity/trivy-action@0.28.0
+          with:
+            scan-type: fs
+            vuln-type: os,library
+            format: json
+            output: trivy-report.json
+            ignore-unfixed: true
+            exit-code: 1
+            directory: .
+        
+        - name: store the artifact
+          uses: actions/upload-artifact@v4
+          with:
+            name: trivy-report
+            path: trivy-report.json
