--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -69,7 +69,7 @@ jobs:
             output: trivy-report.json
             ignore-unfixed: true
             exit-code: 1
-            directory: .
+            scan-ref: .
         
         - name: store the artifact
           uses: actions/upload-artifact@v4
